# rforest

./: .gitignore  CMakeLists.txt  Makefile  README.md  makefile
benchmark/: bench_fft_direct.c  bench_matmul.c
include/: hwmpz.h  mpnfft.h
include/fft62/: cufft62_thresholds.h  cufftwrapper.cuh  mod62.h
src/: hwmpz.c  mpnfft.c
src/fft62/: cufftwrapper.cu  fft62.c  mod62.c
src/include/: cufft62_thresholds.h  cufftwrapper.cuh  hwmpz.h  mod62.h  mpnfft.h  mpzfft.h  mpzfft_moduli.h
src/lib/: crt.c  cufftwrapper.cu  fermat.c  fft62.c  hwmpz.c  moduli.c  mpnfft.c  reduce.c  split_reduce.c
tests/: test_fft.c  test_gpu_matmul.c  test_matmul.c
